<resources>
    <string name="app_name">Apps Square</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your password</string>
    <string name="login">Login</string>
    <string name="address">Address</string>
    <string name="product">Products</string>
    <string name="title_activity_map">MapActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="api_key">AIzaSyDmJh5Im5hB0swnoHNgUbl-f_9Fdn8oUc0</string>
</resources>