<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginActivity"
    android:background="@color/background">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/g1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/_10sdp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:gravity="center"

        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/edittext_bg"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/edittext_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>